Fixed table headers so the text is more visible

--- a/Nightro/css/nitro.css
+++ b/Nightro/css/nitro.css
@@ -200,10 +200,11 @@ div#tickets_table {
 
 /* Body of Lists like Tickets */
 
-thead * {
+thead *, .table th {
   background-image: none !important;
   background-color: #455A6B !important;
-  color: #292929;
+  color: white;
+
 }
 
 tr {
